[package]
name = "img2mc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.1.6"
color-eyre = "0.6.2"
delta_e = { path = "DeltaE" } # Override to update lab dependency
fastnbt = "2.4.4"
gumdrop = "0.8.1"
image = "0.24.6"
itertools = "0.11.0"
lab = "0.11.0"
once_cell = "1.18.0"
rayon = "1.7.0"
reqwest = { version = "0.11.18", features = ["blocking"] }
serde = "1.0.171"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
